fix: fix shadow overflow behaviour

--- a/nuxt/assets/css/tailwind.css
+++ b/nuxt/assets/css/tailwind.css
@@ -26,7 +26,8 @@
   }
 
   .shadow-default {
-    box-shadow: 0px 4px 8px 4px rgba(255, 255, 255, 1);
+    /* box-shadow: 0px 4px 8px 4px rgba(255, 255, 255, 1); */
+    filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 1));
   }
 
   body {
